# power_trading

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  optimization_results.csv  pyproject.toml
.github/workflows/: ci.yml  pr.yml
optimization_results/genetic/: best_params.json  generation_history.csv  optimization_summary.txt
scripts/: optimize_strategy.py  optimize_strategy_genetic.py  run_bot.py
src/power_trading/: backtest.py  genetic_optimizer.py  strategy.py
src/power_trading/data/: base_loader.py  yahoo_loader.py
src/power_trading/strategy/: __init__.py  breakout.py  momentum_gtaa.py  moving_average.py  optimized_residual_momentum.py  optimized_technical.py  residual_momentum.py  rsi_reversion.py  weighted_technical.py
tests/: test_strategy.py  test_yahoo_loader.py
