[project]
name = "power_trading"
version = "0.1.0"
description = "Backtrader + ML"
requires-python = ">=3.13,<4.0"  # ✅ Dodaj górny limit!
license = { file = "LICENSE" }
authors = [
  { name = "Albert Zagrajek" },
]
packages = [
  { include = "power_trading", from = "src" }
]

readme = { file = "README.md", content-type = "text/markdown" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.0.0",
  "mypy>=1.16.0",
  "bandit>=1.8.3",
  "docformatter>=1.7.5",
  "ruff>=0.4.7"
]

[tool.pytest.ini_options]
addopts = "-vvv --cov=src --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
# Główne ustawienia Ruffa
target-version = "py312"
line-length = 90
src = ["src", "tests"]
extend-exclude = ["__pycache__", "build", "dist"]

[tool.ruff.lint]
# Reguły lintingu — zostawiłem Twoje bogate reguły
extend-select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "W",  # warnings
  "I",  # isort
  "UP", # pyupgrade
]

# Ignoruj S101 (asserts) w testach
per-file-ignores = { "tests/*.py" = ["S101"] }

[tool.ruff.format]
# Używaj Ruffa do formatowania kodu jak Black + isort
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "ta.*",
    "backtrader.*",
    "plotly.*",
    "yfinance.*",
    "optuna.*",
    "numpy.*",
    "pandas.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["power_trading.strategy.*"]
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["scripts.*"]
follow_imports = "skip"
ignore_errors = true

[tool.poetry]
name = "power_trading"
version = "0.1.0"
description = "A trading strategy optimization framework"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
optuna = "^3.0.0"
ta = "^0.10.0"
yfinance = "^0.2.0"
backtrader = "^1.9.78"
plotly = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pre-commit = "^3.6.0"
mypy = "^1.9.0"
pandas-stubs = "^2.2.1"
types-requests = "^2.31.0"

[tool.hatch.build.targets.wheel]
packages = ["power_trading"]
package-dir = {"" = "src"}
